[tool.poetry]
name = "datasciencelearning"
version = "0.1.0"
description = ""
authors = ["Philip Michaelsen"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0.2"
pyspark = {extras = ["pandas_on_spark"], version = "^3.2.1"}
pandas = "^1.4.0"
ipython = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
